--- a/index.html
+++ b/index.html
@@ -4,31 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Sign up for Alerts</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-
-    <h1>Weather Alert System</h1>
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <h1>Weather Alert System</h1>
     <div>
 
     <h3>Sign up for alerts!</h3>
 
-    <p1>Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.</p>
+    <p>Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.</p>
 
-   <script type="text/javascript">
+   <script>
 
      alert('Register to get immediate text alerts when classes are canceled, the campus is closed, or other urgent notifications.');
 
      
-   </script>   
-   </div>
+   </script> 
     <figure>
-      <img src="images/flood-alert.jpg">
+      <img src="images/flood-alert.jpg" alt="flood-alert">
       <figcaption>by Tony Webster at https://flickr.com/photos/87296837@N00/47556855001</figcaption>
     </figure>
 
     <p2>This site was created for educational purposes only.</p2>
 
-
+    </div>
   </body>
 </html>
