--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <figcaption>by Tony Webster at https://flickr.com/photos/87296837@N00/47556855001</figcaption>
     </figure>
 
-    <p2>This site was created for educational purposes only.</p2>
+    <p>This site was created for educational purposes only.</p>
 
     </div>
   </body>
